<resources>
    <string name="app_name">Agenda</string>
    <string name="description_store_add">Registrar usuario</string>
    <string name="decription_img_photo">Imagen de usuario</string>
    <string name="string_decription_img_photo">Imagen de usuario</string>
    <string name="name_user_description">Nombre</string>
    <string name="lastName_decription">Apellido</string>
    <string name="age_description">Edad</string>
    <string name="lastName_mother_decription">Apellido</string>
    <string name="hint_name">Nombre del usuario</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_lastname">Apellido Paterno</string>
    <string name="hint_secondlastname">Apellido Materno</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_age">Edad</string>
    <string name="description_text_phone">Telefono</string>
    <string name="dialog_delete_title">¿Delete User?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="edit_store_message_save_success">Tienda Agregada Correctamente</string>
    <string name="edit_store_message_update_success">Tienda Actualizada</string>
    <string name="edit_store_title_edit">Editar Tienda</string>
    <string name="edit_store_title_add">Crear tienda</string>
    <string name="menu_save">Save</string>
    <string name="edit_store_message_valid">Revise los campos requeridos</string>
</resources>