<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_card_height"
    android:layout_margin="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/string_decription_img_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginTop="8dp"
            android:text="@string/name_user_description"
            app:layout_constraintStart_toEndOf="@+id/imagePhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:text="@string/lastName_decription"
            app:layout_constraintStart_toEndOf="@+id/textName"
            app:layout_constraintTop_toTopOf="@+id/textName" />

        <TextView
            android:id="@+id/textLastNameMother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:text="@string/lastName_mother_decription"
            app:layout_constraintStart_toEndOf="@+id/textLastName"
            app:layout_constraintTop_toTopOf="@+id/textLastName" />

        <TextView
            android:id="@+id/textAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:text="@string/age_description"
            app:layout_constraintBottom_toTopOf="@+id/textPhone"
            app:layout_constraintStart_toEndOf="@+id/imagePhoto"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <ImageView
            android:id="@+id/image_trash"
            android:layout_width="@dimen/common_width_trash"
            android:layout_height="@dimen/common_heigth_trash"
            android:layout_marginEnd="@dimen/common_padding_default"
            android:layout_marginBottom="@dimen/common_padding_min"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_restore_from_trash" />

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description_text_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagePhoto" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>